# carbon

./: .env  .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  README.md  go.mod  go.sum  main.go
.github/workflows/: codeql-analysis.yml  release.yml  unit-tests.yml
builder/: build.go  build_test.go  builder.go  builder_test.go  compose.go  compose_test.go  logs.go  logs_test.go  shell.go  shell_test.go
carbon/: carbon.go  carbon_test.go
cmd/: common.go  logs.go  logs_test.go  mocks_test.go  root.go  service.go  service_start.go  service_start_test.go  service_stop.go  service_stop_test.go  shell.go  shell_test.go  show.go  show_test.go  store.go  store_add.go  store_add_test.go  store_remove.go  store_remove_test.go
database/: api.go  database.go  database_test.go
docker/: api.go  docker.go  docker_test.go  wrapper.go
helpers/: array.go  array_test.go  color.go  color_test.go  dir.go  dir_test.go  file.go  file_test.go  hash.go  hash_test.go  random.go  random_test.go
logger/: logger.go  logger_test.go  table.go  table_test.go
printer/: mocks_test.go  out.go  printer.go  printer_test.go  table.go  table_test.go
runner/: runner.go  runner_test.go  wrapper.go
src/: app.rs  carbon.rs  config.rs  error.rs  main.rs
src/app/: env.rs  mod.rs  network.rs  service.rs
src/config/: emissions.rs  footprint.rs  mod.rs
src/docker/: compose.rs  mod.rs  (+2 more)
types/: carbon.go  command.go  compose.go  compose_test.go  container.go  store.go  util.go
ui/: menu.go  menu_item.go  screen.go  screen_build.go  screen_main.go  screen_run.go  screen_shell.go  ui.go
(+14 files in other folders)
