[package]
name = "carbon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
dotenv = "0.15"
paris = { version = "1.5", features = [ "macros" ] }
rand = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
toml = "0.5"
shellexpand = "2"
key-list = "1"
