[package]
name = "carbon-cli"
version = "0.1.1"
edition = "2021"

documentation = "https://github.com/4khara/carbon"
homepage = "https://github.com/4khara/carbon"
repository = "https://github.com/4khara/carbon"
readme = "README.md"

keywords = ["docker", "docker-compose", "cli", "orchestration"]
categories = ["command-line-interface", "command-line-utilities"]

description = "Docker abstraction layer with added flair"

license = "MPL-2.0"

exclude = [
    "tests/*"
]

[badge]
maintenance = { status = "actively-maintained" }

[dependencies]
clap = "2"
dotenv = "0.15"
paris = { version = "1.5", features = [ "macros" ] }
rand = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
toml = "0.5"
shellexpand = "2"
key-list = "1"
